--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/passport": "*",
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "~4.0",
         "uxweb/sweet-alert": "^2.0"
     },
